# geek-night-demo

./: Dockerfile  README.md
.github/workflows/: main-pipeline.yaml  pr-pipeline.yaml
my-ros-package/: package.xml  snapcraft.yaml
my-ros-package/snap/: snapcraft.yaml
my-ros-package/src/: CMakeLists.txt  publisher_node.cpp  subscriber_node.cpp
ros-listener-talker/snap/: snapcraft.yaml
simple-snap/src/: CMakeLists.txt  main.cpp  snapcraft.yaml
simple-snap/src/snap/: snapcraft.yaml
simple-snap/src/snap/parts/: .snapcraft_global_state
snapdocker/: Dockerfile
snapdocker/scripts/: install-core20.sh  install-local-snaps.sh  install-requirements.sh  install-snap.sh
