<package format="2">
  <name>my_ros_package</name>
  <version>0.0.1</version>
  <description>A sample ROS package with C++ publisher and subscriber nodes.</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>